Fix arrow image on mobile and update Favicon to pink

--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ iframe {
 }
 
 img {
-  max-width: 100%;
+  /*max-width: 100%;*/
   height: auto;
   border: none;
 }
